test/log/move/vmv_v_i_i32_m.txt
vmv_v_i_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vmv_v_i_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vmv_v_i_i32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vmv_v_i_i32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vmv_v_i_i32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vmv_v_i_i32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vmv_v_i_i32_m.c:22:6: warning: no previous prototype for 'vmv_v_i_i32_m_golden' [-Wmissing-prototypes]
   22 | void vmv_v_i_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t imm,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vmv_v_i_i32_m.c: In function 'vmv_v_i_i32_m_golden':
vmv_v_i_i32_m.c:24:25: error: 'TODO' undeclared (first use in this function)
   24 |         exp_result[i] = TODO;
      |                         ^~~~
vmv_v_i_i32_m.c:24:25: note: each undeclared identifier is reported only once for each function it appears in
vmv_v_i_i32_m.c:22:36: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vmv_v_i_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t imm,int32_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vmv_v_i_i32_m.c:22:50: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vmv_v_i_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t imm,int32_t *exp_result) {
      |                                         ~~~~~~~~~^~~~~~~
vmv_v_i_i32_m.c:22:66: warning: unused parameter 'imm' [-Wunused-parameter]
   22 | void vmv_v_i_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t imm,int32_t *exp_result) {
      |                                                          ~~~~~~~~^~~
vmv_v_i_i32_m.c: In function 'main':
vmv_v_i_i32_m.c:40:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   40 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vmv_v_i_i32_m.c:45:26: error: incompatible type for argument 1 of 'vmv_v_i_i32_m_golden'
   45 |     vmv_v_i_i32_m_golden(exp_mask,exp_maskoff,exp_imm,exp_result);
      |                          ^~~~~~~~
      |                          |
      |                          uint64_t * {aka long long unsigned int *}
vmv_v_i_i32_m.c:22:36: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vmv_v_i_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t imm,int32_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vmv_v_i_i32_m.c:53:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   53 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vmv_v_i_i32_m.c:32:13: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   32 |     int32_t imm;
      |             ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_v_i_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vmv_v_i_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vmv_v_i_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_v_i_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed